@@ -14,6 +14,7 @@ Post-v2.3.0
      release.  See ovs-vswitchd(8) for details.
    - OpenFlow:
      * OpenFlow 1.5 (draft) extended registers are now supported.
+     * The OpenFlow 1.5 (draft) actset_output field is now supported.
      * OpenFlow 1.5 (draft) Copy-Field action is now supported.
      * OpenFlow 1.5 (draft) masked Set-Field action is now supported.
      * OpenFlow 1.3+ table features requests are now supported (read-only).
